--- a/proyecto1/plantillas/editar-libro.html
+++ b/proyecto1/plantillas/editar-libro.html
@@ -73,7 +73,7 @@
 				<p>Direccion Portada actual:<FONT COLOR="blue">{{Portada}}</FONT> </p>
 				<input type="text" name="Portada" placeholder="Cambiar Portada">
 				<p>Codigo actual:</p>
-				<input type="text" name="codigo" placeholder="Codigo actual" value={{codigo}} readonly="">
+				<input type="text" name="codigo" placeholder="Codigo actual" readonly=""value={{codigo}} >
 				<input type="submit" id="enviar-datos-editar-l" value="Confirmar cambios">
 				
 				
