--- a/proyecto1/plantillas/home-client.html
+++ b/proyecto1/plantillas/home-client.html
@@ -32,7 +32,7 @@
 						<form action="/perfil/" method="GET">
 							<input type="submit" value="Noticias">
 						</form>
-						<form action="/perfil/" method="GET">
+						<form action="/paginaComprarLibro/" method="GET">
 							<input type="submit" value="Compras y reservas">
 						</form>
 						<li class="buscador-cliente">
@@ -54,27 +54,32 @@
 	<div class="client-home-vista">
 		
 		<div class="elemeto1">
-			<img src={{imagen0}}>
+			<a href="/paginaComprarLibro/?"><img src={{imagen0}}></a>
+			<a>{{titulo0}}</a>
 			<a>{{autor0}}</a>
 		</div>
 
 		<div class="elemeto2">
 			<img src={{imagen1}}>
+			<a>{{titulo1}}</a>
 			<a>{{autor1}}</a>
 		</div>
 
 		<div class="elemeto3">
 			<img src={{imagen2}}>
+			<a>{{titulo2}}</a>
 			<a>{{autor2}}</a>
 		</div>
 
 		<div class="elemeto4">
 			<img src={{imagen3}}>
+			<a>{{titulo3}}</a>
 			<a>{{autor3}}</a>
 		</div>
 
 		<div class="elemeto5">
 			<img src={{imagen4}}>
+			<a>{{titulo4}}</a>
 			<a>{{autor4}}</a>
 		</div>
 										
