--- a/proyecto1/plantillas/index.html
+++ b/proyecto1/plantillas/index.html
@@ -38,7 +38,7 @@
 	<div class="container-cover">
 		<div class="container-info-cover">
 			<h1>Bienvenido a la Libreria de Los Libros Hermanos</h1>
-			<p>¡Encuentra libros de todo tipo para que te los devores como si estuvieses comiendo pollo!</p>
+			<p>¡Encuentra los libros que quieres!</p>
 		</div>
 	</div>
 
