--- a/proyecto1/plantillas/editar-perfil-root.html
+++ b/proyecto1/plantillas/editar-perfil-root.html
@@ -40,9 +40,9 @@
 		
 			<h1>Cambiar información de perfil ROOT</h1>
 			<p><FONT COLOR="red">{{mensaje}}</FONT> </p>
-			<input type="text" placeholder="Contraseña actual"name="contraActual">
-			<input type="text" placeholder="Contraseña nueva"name="contraNueva">
-			<input type="text" placeholder="Confirmar contraseña nueva"name="confContra">
+			<input type="password" placeholder="Contraseña actual"name="contraActual">
+			<input type="password" placeholder="Contraseña nueva"name="contraNueva">
+			<input type="password" placeholder="Confirmar contraseña nueva"name="confContra">
 			<input type="submit" id="wasd1" value="ACTUALIZAR INFORMACIÓN">
 		</form>
 	</div>
