--- a/proyecto1/plantillas/principal-admin.html
+++ b/proyecto1/plantillas/principal-admin.html
@@ -44,9 +44,9 @@
 				<form action="/paginaEditarLibro/" method="GET">
 					<a><input type="submit" value="EDITAR LIBRO"></a>
 				</form>
-				<form action="//" method="GET">
+				<!--<form action="//" method="GET">
 					<a><input type="submit" value="ADMINISTRAR EXISTENCIAS DE LIBROS"></a>
-				</form>
+				</form>-->
 				<form action="/paginaEliminarLibro/" method="GET">
 					<a><input type="submit" value="ELIMINAR LIBRO"></a>
 				</form>
