--- a/proyecto1/plantillas/register.html
+++ b/proyecto1/plantillas/register.html
@@ -287,8 +287,8 @@
 		<div class="datos-cuenta">
 			<input type="text" placeholder="Usuario"name="usuario">
 			<input type="email" placeholder="Correo"name="correo">
-			<input type="text" placeholder="Contraseña"name="contraseña">
-			<input type="text" placeholder="Confirmar contraseña"name="confcontraseña">
+			<input type="password" placeholder="Contraseña"name="contraseña">
+			<input type="password" placeholder="Confirmar contraseña"name="confcontraseña">
 		</div>
 		<p><FONT COLOR="red">{{mensaje}}</FONT> </p>
 
