--- a/proyecto1/plantillas/editar-perfil.html
+++ b/proyecto1/plantillas/editar-perfil.html
@@ -26,8 +26,6 @@
 					
 					<ul>
 					
-						<form action="/perfil/" method="GET">
-							<input type="submit" value="Mensajes">
 						</form>
 						<form action="/perfil/" method="GET">
 							<input type="submit" value="Noticias">
@@ -35,7 +33,7 @@
 						<form action="/perfil/" method="GET">
 							<input type="submit" value="Compras y reservas">
 						</form>
-						<form action="/perfil/" method="GET">
+						<form action="/index/" method="GET">
 							<input type="submit" value="Cerrar sesión">
 						</form>
 
