--- a/proyecto1/plantillas/comprar-reservar-libro.html
+++ b/proyecto1/plantillas/comprar-reservar-libro.html
@@ -29,15 +29,9 @@
 							<input type="submit" value="Perfil">
 						</form>
 						<form action="/perfil/" method="GET">
-							<input type="submit" value="Mensajes">
-						</form>
-						<form action="/perfil/" method="GET">
 							<input type="submit" value="Noticias">
 						</form>
-						<form action="/perfil/" method="GET">
-							<input type="submit" value="Compras y reservas">
-						</form>
-						<form action="/perfil/" method="GET">
+						<form action="/index/" method="GET">
 							<input type="submit" value="Cerrar sesión">
 						</form>
 
@@ -59,30 +53,27 @@
 	<div class="info-precio-cantidad">
 		<h1>COMPRAR LIBRO</h1>
 
-		<img src="https://i.pinimg.com/236x/72/a8/7f/72a87f18c6aa0ae668ec174c8cca8f6f.jpg">
+		<img src={{portada}}>
 
-		<p>Precio: <FONT COLOR="green">texto</FONT></p>
-		<p>Cantidad disponible: <FONT COLOR="green">texto</FONT></p>
+		<p>Precio: <FONT COLOR="green">{{precio}}</FONT></p>
+		
 	</div>
 
 	<div class="comprar-libro-info">
 		
-		<p>Titulo: <FONT COLOR="blue">texto</FONT></p>
-		<p>Autor: <FONT COLOR="blue">texto</FONT></p>
-		<p>Año publicacion: <FONT COLOR="blue">texto</FONT></p>
-		<p>Genero: <FONT COLOR="blue">texto</FONT></p>
-		<p>Nro Paginas: <FONT COLOR="blue">texto</FONT></p>
-		<p>Editorial: <FONT COLOR="blue">texto</FONT></p>
-		<p>Idioma: <FONT COLOR="blue">texto</FONT></p>
-		<p>Estado: <FONT COLOR="blue">texto</FONT></p>
-		<p>Fecha publicación: <FONT COLOR="blue">texto</FONT></p>
+		<p>Titulo: <FONT COLOR="blue">{{titulo}}</FONT></p>
+		<p>Autor: <FONT COLOR="blue">{{autor}}</FONT></p>
+		<p>Año publicacion: <FONT COLOR="blue">{{año}}</FONT></p>
+		<p>Genero: <FONT COLOR="blue">{{genero}}</FONT></p>
+		<p>Nro Paginas: <FONT COLOR="blue">{{numeropaginas}}</FONT></p>
+		<p>Editorial: <FONT COLOR="blue">{{editorial}}</FONT></p>
+		<p>Idioma: <FONT COLOR="blue">{{idioma}}</FONT></p>
+		<p>Estado: <FONT COLOR="blue">{{estado}}</FONT></p>
 		
 	</div>
 
 	<div class="seleccionar-cantidad-y-compra">
-		<p>Dinero disponible: <FONT COLOR="green">texto</FONT></p>
 		<form>
-			<input type="number" name="Cantidad" placeholder="Indique la cantidad a comprar">
 			<input type="submit" id="boton-comprar-libro" value="Comprar Libro">
 			<input type="submit" id="boton-reservar-libro" value="Reservar Libro">
 		</form>
@@ -97,16 +88,6 @@
 
 
 
-	<!--Pie de pagina-->
-	<footer>
-		<div class="foot">
-			<p id="footer">
-			Nuestros contactos
-			</p>
-			<p>Tel: (+57) 321 6549870</p>
-			<p>Correo: <a href="https://mail.google.com/mail/u/0/?fs=1&tf=cm&source=mailto&to=polloshermanoslib@melos.com" target="_BLANK">polloshermanoslib@melos.com</a></p>
-		</div>
-	</footer>
 
 </body>
 </html>
