--- a/proyecto1/plantillas/index.html
+++ b/proyecto1/plantillas/index.html
@@ -25,8 +25,10 @@
 			<div class="menu">
 				<nav>
 					<ul>
-						<li ><a href="#">Información</a></li>
+						<form action="/infoIndex/" method="GET">
 						<li ><a href="#footer" >Contacto</a></li>
+						<input type="submit" value="info">
+					</form>
 					</ul>
 				</nav>
 			</div>
