--- a/proyecto1/plantillas/index.html
+++ b/proyecto1/plantillas/index.html
@@ -7,8 +7,8 @@
 	<title>Libreria Los Libros Hermanos</title>
 	<link  href="{% static '/css/estilos.css' %}" rel="stylesheet" type="text/css">
 	<link  href="{% static 'lph.ico' %}" rel="icon" >
-		
-	</form>
+
+	
 	
 </head>
 
@@ -25,9 +25,13 @@
 			<div class="menu">
 				<nav>
 					<ul>
-						<form action="/infoIndex/" method="GET">
+					<form action="/infoIndex/" method="GET">
+
+						<input type="submit" value="información">
+
 						<li ><a href="#footer" >Contacto</a></li>
-						<input type="submit" value="info">
+
+						
 					</form>
 					</ul>
 				</nav>
