--- a/proyecto1/plantillas/comprar-reservar-libro.html
+++ b/proyecto1/plantillas/comprar-reservar-libro.html
@@ -28,13 +28,15 @@
 						<form action="/perfil/" method="GET">
 							<input type="submit" value="Perfil">
 						</form>
-						<form action="/perfil/" method="GET">
+						<form action="/noticias/" method="GET">
 							<input type="submit" value="Noticias">
 						</form>
 						<form action="/index/" method="GET">
 							<input type="submit" value="Cerrar sesión">
 						</form>
-
+						<form action="/paginaLibrosComprados/" method="GET">
+							<input type="submit" value="Compras">
+						</form>
 						<li class="buscador-cliente">
 							<form action="/buscar/" method="GET">
 								<input id="barra-search-client" type="search" placeholder="Busca un libro" name="buscarBD">
