--- a/proyecto1/plantillas/editar-perfil.html
+++ b/proyecto1/plantillas/editar-perfil.html
@@ -27,11 +27,11 @@
 					<ul>
 					
 						</form>
-						<form action="/perfil/" method="GET">
+						<form action="/noticias/" method="GET">
 							<input type="submit" value="Noticias">
 						</form>
-						<form action="/perfil/" method="GET">
-							<input type="submit" value="Compras y reservas">
+						<form action="/paginaLibrosComprados/" method="GET">
+							<input type="submit" value="Compras">
 						</form>
 						<form action="/index/" method="GET">
 							<input type="submit" value="Cerrar sesión">
